[package]
name = "subxt-test-node-proc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Spawn a local substrate dev node for testing"
keywords = ["parity", "substrate", "blockchain"]

[dependencies]
log = "0.4.14"
substrate-subxt = { version = "0.14.0", path = ".." }
thiserror = "1.0.24"

