[package]
name = "test-node"
version = "2.0.0"
authors = ["Anonymous"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.5"
log = "0.4.11"
structopt = "0.3.17"
parking_lot = "0.11.0"

sc-cli = { version = "0.8.0", features = ["wasmtime"] }
sp-core = "2.0.0"
sc-executor = { version = "0.8.0", features = ["wasmtime"] }
sc-service = { version = "0.8.0", features = ["wasmtime"] }
sp-inherents = "2.0.0"
sc-transaction-pool = "2.0.0"
sp-transaction-pool = "2.0.0"
sc-network = "0.8.0"
sc-consensus-aura = "0.8.0"
sp-consensus-aura = "0.8.0"
sp-consensus = "0.8.0"
sc-consensus = "0.8.0"
sc-finality-grandpa = "0.8.0"
sp-finality-grandpa = "2.0.0"
sc-client-api = "2.0.0"
sp-runtime = "2.0.0"
sc-basic-authorship = "0.8.0"

test-node-runtime = { path = "runtime" }

[build-dependencies]
substrate-build-script-utils = "2.0.0"
