[package]
name = "test-node"
version = "2.0.0"
authors = ["Anonymous"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
log = "0.4.13"
structopt = "0.3.21"
parking_lot = "0.11.1"

sc-cli = { version = "0.8.1", features = ["wasmtime"] }
sp-core = "2.0.1"
sc-executor = { version = "0.8.1", features = ["wasmtime"] }
sc-service = { version = "0.8.1", features = ["wasmtime"] }
sp-inherents = "2.0.1"
sc-transaction-pool = "2.0.1"
sp-transaction-pool = "2.0.1"
sc-network = "0.8.1"
sc-consensus-aura = "0.8.1"
sp-consensus-aura = "0.8.1"
sp-consensus = "0.8.1"
sc-consensus = "0.8.1"
sc-finality-grandpa = "0.8.1"
sp-finality-grandpa = "2.0.1"
sc-client-api = "2.0.1"
sp-runtime = "2.0.1"
sc-basic-authorship = "0.8.1"

test-node-runtime = { path = "runtime" }

[build-dependencies]
substrate-build-script-utils = "2.0.1"
