[package]
name = "test-node"
version = "2.0.0"
authors = ["Anonymous"]
description = "Substrate Node template"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
log = "0.4.13"
structopt = "0.3.21"
parking_lot = "0.11.1"

sc-cli = { version = "0.9.0", features = ["wasmtime"] }
sp-core = "3.0.0"
sc-executor = { version = "0.9.0", features = ["wasmtime"] }
sc-service = { version = "0.9.0", features = ["wasmtime"] }
sp-inherents = "3.0.0"
sc-transaction-pool = "3.0.0"
sp-transaction-pool = "3.0.0"
sc-network = "0.9.0"
sc-consensus-aura = "0.9.0"
sp-consensus-aura = "0.9.0"
sp-consensus = "0.9.0"
sc-consensus = "0.9.0"
sc-finality-grandpa = "0.9.0"
sp-finality-grandpa = "3.0.0"
sc-client-api = "3.0.0"
sp-runtime = "3.0.0"
sc-basic-authorship = "0.9.0"

test-node-runtime = { path = "runtime" }

[build-dependencies]
substrate-build-script-utils = "3.0.0"
