[package]
name = "test-runtime"
version = "0.17.0"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }

sp-runtime = { package = "sp-runtime", git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../subxt" }
sp-core = { package = "sp-core", git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
which = "4.2.2"
