[package]
name = "test-runtime"
version = "0.18.1"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }
sp-runtime = "6.0.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../subxt" }
sp-core = "6.0.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
which = "4.2.2"
