[package]
name = "test-runtime"
version = "0.19.0"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }

sp-runtime = { package = "sp-runtime", git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../subxt" }
sp-core = { package = "sp-core", git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

tokio = { version = "1.8", features = ["rt", "macros"] }
which = "4.2.2"
