[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.8.3"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
sp-keyring = "3.0.0"
frame-system = "3.0.0"
pallet-balances = "3.0.0"