[package]
name = "subxt-value"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde", "bitvec/serde"]

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
serde = { version = "1.0.124", features = ["derive"], optional = true }
frame-metadata = "15.0.0"
thiserror = "1.0.24"
serde_json = "1.0.64"
serde-value = "0.7.0"

[dev-dependencies]
