[package]
name = "parachain-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
subxt = { path = "../../subxt" }
subxt-signer = { path = "../../signer", features = ["web"] }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
tokio = { version = "1.28", features = ["macros", "time", "rt-multi-thread"] }
sp-core = "21.0.0"
sp-runtime = "24.0.0"
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
scale-decode = "0.7.0"
scale-encode = "0.3.0"
