[workspace]

[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
subxt = { path = "../../subxt", default-features = false, features = ["jsonrpsee", "web"], target_arch = "wasm32" }
yew = {version = "0.20.0", features = ["csr"] }
web-sys = "0.3.63"
hex = "0.4.3"
