[package]
name = "subxtwasm"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
subxt = {path = "../../subxt", default-features = false, features = ["jsonrpsee-web"], target_arch = "wasm32" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = "0.3.63"
hex = "0.4.3"
