[package]
name = "wasm32"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
subxt = { workspace = true, default-features = false, features = ["web"]}
codec = {  package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"]}
