[package]
name = "test-node-runtime"
version = "2.0.0-rc5"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", optional = true, features = ["derive"] }

aura = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-aura" }
balances = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-balances" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-grandpa" }
randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-randomness-collective-flip" }
sudo = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-sudo" }
system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "frame-system" }
timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-timestamp" }
transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false, package = "pallet-transaction-payment" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
