[package]
name = "generate-custom-metadata"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { workspace = true, features = ["std", "bit-vec"] }
frame-metadata = { workspace = true, features = ["decode", "current"] }
codec = { package = "parity-scale-codec", workspace = true, features = ["std", "derive", "bit-vec"] }
